--- a/demo/nytimes.html
+++ b/demo/nytimes.html
@@ -16,7 +16,8 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>blockingElements polyfill test page</title>
-  <script src="../../inert/dist/inert.js"></script>
+  <script src="../node_modules/babel-polyfill/dist/polyfill.min.js"></script>
+  <script src="../node_modules/wicg-inert/dist/inert.js"></script>
   <script src="../dist/blocking-elements.js"></script>
 
   <style>
