--- a/test/index.html
+++ b/test/index.html
@@ -63,7 +63,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </script>
 
   <!-- The script under test -->
-  <script src="../dist/blocking-elements.js"></script>
+  <script src="../dist/blocking-elements.min.js"></script>
 
   <!-- Tests -->
   <script src="basic.js"></script>
